# icfp-2015

./: Generate.hs  ICFP2015.cabal  LICENSE.md  Makefile  README.md  icfp.cabal
executable/: Main.hs
sample-data/: phrases.txt
