author:                 Sebastian Conybeare
version:                0.0.1
build-type:             Simple
cabal-version:          >= 1.10
category:               AI
copyright:              2015 Sebastian Conybeare <sebmathguy@gmail.com>
description:            The UIUC SIGPLAN entry into the ICFP 2015 competition.
synopsis:               The UIUC SIGPLAN entry into the ICFP 2015 competition.
extra-source-files:     README.md
license-file:           LICENSE.md
license:                MIT
maintainer:             sebmathguy@gmail.com
name:                   ICFP2015

library
    build-depends:      base                 >=4.6  && <5
                      , aeson                >=0.9  && <1.0
                      , filepath             >=1.4  && <1.5
                      , optparse-applicative >=0.11 && <0.12
                      , text                 >=1.2  && <1.3
                      , vector-space         >=0.8  && <0.9
    default-language:   Haskell2010
    exposed-modules:    ICFP2015
                      , CommandLine
    ghc-options:        -Wall
    hs-source-dirs:     library
    default-extensions: OverloadedStrings

executable ICFP2015
    build-depends:      base
                      , ICFP2015
    default-language:   Haskell2010
    ghc-options:        -threaded
    hs-source-dirs:     executable
    main-is:            Main.hs
