author:                 Sebastian Conybeare
version:                0.0.1
build-type:             Simple
cabal-version:          >= 1.10
category:               AI
copyright:              2015 Sebastian Conybeare <sebmathguy@gmail.com>
description:            The UIUC SIGPLAN entry into the ICFP 2015 competition.
synopsis:               The UIUC SIGPLAN entry into the ICFP 2015 competition.
extra-source-files:     README.md
license-file:           LICENSE.md
license:                MIT
maintainer:             sebmathguy@gmail.com
name:                   ICFP2015

library
    build-depends:      base                 >=4.6  && <5

                      , filepath             >=1.4  && <1.5
                      , bytestring           >=0.10 && <0.11
                      , text                 >=1.2  && <1.3

                      , containers           >=0.5  && <0.6
                      , matrix               >=0.3  && <0.4
                      , vector               >=0.10 && <0.12
                      , vector-space         >=0.10 && <0.11

                      , random               >=1.1  && <1.2

                      , aeson                >=0.9  && <1.0
                      , optparse-applicative >=0.11 && <0.12

                      , threepenny-gui       >=0.6  && <0.7

    default-language:   Haskell2010
    exposed-modules:    ICFP2015
                      , Types
                      , GameState
                      , Hash
                      , Search
                      , CommandLine
                      , Render
                      , Parse
                      , Random
    ghc-options:        -Wall
    hs-source-dirs:     library
    default-extensions: OverloadedStrings

executable ICFP2015
    build-depends:      base
                      , ICFP2015
    default-language:   Haskell2010
    ghc-options:        -threaded
    hs-source-dirs:     executable
    main-is:            Main.hs
